fixed overflow :(

--- a/style.css
+++ b/style.css
@@ -23,18 +23,6 @@ body {
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-#fade {
-	display: none;
-	transition: display 0.5s;
-	opacity: 0.5;
-	background: #000;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	position: fixed;
-}
-
 .floating {
 	animation-name: floating;
 	animation-duration: 3s;
